# FrameDiff

./: .gitignore  pyproject.toml  requirements.txt
data/gt_dataset/: index.json
demo/: demo.py  make_vid.py  web_demo_test.py
notebooks/: demo_video.ipynb  fib_pairs.ipynb  optical_flow_and_blur.ipynb  parquet_eval.ipynb  yolo_eval.ipynb
src/: stage1_boxes.py  stage2_pair.py  stage3_labels.py  stage4_dataloader.py  stage5_model.py  stage6_train.py  stage7_validation.py  stage8_latency.py
